# seminar_assignments

./: .gitignore  README.md
assignment_2/: README.md
assignment_2/plots/: Benchmarks.xlsx
assignment_2/tests/histogram/: histogram-pthread.c  histogram-seq.c  histogram.c  run_map_reduce.sh  run_pthread.sh  run_sequential.sh
assignment_2/tests/kmeans/: kmeans-pthread.c  kmeans-seq.c  kmeans.c  run_map_reduce.sh  run_pthread.sh  run_sequential.sh
assignment_2/tests/linear_regression/: linear_regression-pthread.c  linear_regression-seq.c  linear_regression.c  run_map_reduce.sh  run_pthread.sh  run_sequential.sh
assignment_2/tests/matrix_multiply/: matrix_multiply-pthread.c  matrix_multiply-seq.c  matrix_multiply.c  run_map_reduce.sh  run_pthread.sh  run_seq.sh
assignment_2/tests/pca/: pca-pthread.c  pca-seq.c  pca.c  run_map_reduce.sh  run_pthread.sh  run_sequential.sh
assignment_2/tests/string_match/: run_map_reduce.sh  run_pthread.sh  run_sequential.sh  string_match-pthread.c  string_match-seq.c  string_match.c
assignment_2/tests/word_count/: run_map_reduce.sh  run_pthread.sh  run_sequential.sh  sort-pthread.c  word_count-pthread.c  word_count-seq.c  word_count.c
assignment_4/: README.md
mlir-relay/: CMakeLists.txt
mlir-relay/include/Relay/: CMakeLists.txt  RelayDialect.h  RelayDialect.td  (+3 more)
mlir-relay/lib/: CMakeLists.txt
mlir-relay/output/: affine_for.ll  affine_if.ll  print.ll
mlir-relay/relay/: CMakeLists.txt  relay.cpp
mlir-relay/test/: affine_for.mlir  affine_if.mlir  print.mlir
seminar_paper/: paper_review.tex  research_proposal.tex
(+11 files in other folders)
